--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     <h1>Hello, world!</h1>
 
     <label for="hanRange">Han</label>
-    <input type="range" class="custom-range" min="1" max="13" id="hanRange"
+    <input type="range" class="custom-range" min="1" max="13" value="1" id="hanRange">
+
+    <label for="fuRange">Fu</label>
+    <input type="range" class="custom-range" min="20" max="110" value="20" step="10" id="fuRange">
+
+    <label for="hanCounter">Han</label>
+    <input id="hanCounter" type="number" value="1" />
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
