--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
     <input type="range" class="custom-range" min="20" max="110" value="20" step="10" id="fuRange">
 
     <label for="hanCounter">Han</label>
-    <input id="hanCounter" type="number" value="1" />
-    
+  
+    <button onclick="decrement()">-</button>
+    <input id="hanCounter" type="number" value="1" min="1" max="13" />
+    <button onclick="increment()">+</button>
+
 
     <!-- Optional JavaScript -->
+    <script src="js/functions.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
