--- a/index.html
+++ b/index.html
@@ -11,18 +11,11 @@
     <title>Fu Calculator</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
-    <label for="hanRange">Han</label>
-    <input type="range" class="custom-range" min="1" max="13" value="1" id="hanRange">
-
-    <label for="fuRange">Fu</label>
-    <input type="range" class="custom-range" min="20" max="110" value="20" step="10" id="fuRange">
 
     <label for="hanCounter">Han</label>
   
     <button onclick="decrement()">-</button>
-    <input id="hanCounter" type="number" value="1" min="1" max="13" />
+    <input id="hanCounter" type="number" value="1" min="1" max="13" readonly= />
     <button onclick="increment()">+</button>
 
 
