--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
     <label for="hanCounter">Han</label>
   
     <button onclick="decrement('hanCounter')">-</button>
-    <input id="hanCounter" type="number" value="1" min="1" max="13" readonly= />
+    <input id="hanCounter" type="number" value="1" min="1" max="13" readonly />
     <button onclick="increment('hanCounter')">+</button>
+    <br>
 
     <label for="hanCounter">Fu</label>
   
     <button onclick="decrement('fuCounter')">-</button>
-    <input id="fuCounter" type="number" value="20" min="20" max="110" step="10" readonly= />
+    <input id="fuCounter" type="number" value="20" min="20" max="110" step="10" readonly />
     <button onclick="increment('fuCounter')">+</button>
+    <br>
+
+    <button onclick="decrement('honbaCounter')">-</button>
+    <input id="honbaCounter" type="number" value="0" min="0" readonly />
+    <button onclick="increment('honbaCounter')">+</button>
+    <br>
 
 
     <!-- Optional JavaScript -->
