--- a/index.html
+++ b/index.html
@@ -26,10 +26,17 @@
     <button onclick="increment('fuCounter')">+</button>
     <br>
 
+    <label for="honbaCounter">Honba</label>
+
     <button onclick="decrement('honbaCounter')">-</button>
     <input id="honbaCounter" type="number" value="0" min="0" readonly />
     <button onclick="increment('honbaCounter')">+</button>
     <br>
+
+    <label for="dealerCheckbox">Dealer</label>
+    <input type="checkbox" id="dealerCheckbox" name="dealerCheckbox" value="true">
+    <br>
+    
 
 
     <!-- Optional JavaScript -->
