added scoring function

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <label for="dealerCheckbox">Dealer</label>
     <input type="checkbox" id="dealerCheckbox" name="dealerCheckbox" value="true">
     <br>
+
+    <label for="scoreTsumo">Tsumo</label>
+    <input id="tsumo1" type="number" onload="scoring(false)[0]" min="300" max="48000" step="100" readonly />
+
     
 
 
