--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <br>
 
     <label for="scoreTsumo">Tsumo</label>
-    <input id="tsumo1" type="number" onchange="scoring(false)" min="300" max="48000" step="100" readonly />
-    <input id="tsumo2" type="number" onchange="scoring(false)" min="300" max="48000" step="100" readonly />
+    <input id="tsumo1" type="number" onload="scoring(false)" min="300" max="48000" step="100" readonly />
+    <input id="tsumo2" type="number" onload="scoring(false)" min="300" max="48000" step="100" readonly />
 
     
 
