--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Fu Calculator</title>
   </head>
-  <body onload="scoring(false)">
+  <body onload="scoring(false); scoring(true)">
 
     <label for="hanCounter">Han</label>
   
@@ -37,9 +37,13 @@
     <input type="checkbox" id="dealerCheckbox" name="dealerCheckbox" value="true">
     <br>
 
+    <label for="scoreRon">Ron</label>
+    <input id="ron" type="number" min="1000" max="48000" step="100" readonly />
+    <br>
+
     <label for="scoreTsumo">Tsumo</label>
-    <input id="tsumo1" type="number" value="48000" min="300" max="48000" step="100" readonly />
-    <input id="tsumo2" type="number" value="48000" min="300" max="48000" step="100" readonly />
+    <input id="tsumo1" type="number" value="48000" min="300" max="16000" step="100" readonly />
+    <input id="tsumo2" type="number" value="48000" min="300" max="16000" step="100" readonly />
 
     
 
