typo fixes functions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Fu Calculator</title>
   </head>
-  <body onload="scoring(false); scoring(true)">
+  <body onload="scoring(false); scoring(true);">
 
     <label for="hanCounter">Han</label>
   
