--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
     <label for="hanCounter">Han</label>
   
     <button onclick="decrement('hanCounter')">-</button>
-    <input id="hanCounter" type="number" onchange="scoring()" value="1" min="1" max="13" readonly />
+    <input id="hanCounter" type="number" value="1" min="1" max="13" readonly />
     <button onclick="increment('hanCounter')">+</button>
     <br>
 
     <label for="hanCounter">Fu</label>
   
     <button onclick="decrement('fuCounter')">-</button>
-    <input id="fuCounter" type="number" onchange="scoring()" value="30" min="20" max="110" step="10" readonly />
+    <input id="fuCounter" type="number" value="30" min="20" max="110" step="10" readonly />
     <button onclick="increment('fuCounter')">+</button>
     <br>
 
     <label for="honbaCounter">Honba</label>
 
     <button onclick="decrement('honbaCounter')">-</button>
-    <input id="honbaCounter" type="number" onchange="scoring()" value="0" min="0" readonly />
+    <input id="honbaCounter" type="number" value="0" min="0" readonly />
     <button onclick="increment('honbaCounter')">+</button>
     <br>
 
