--- a/index.html
+++ b/index.html
@@ -7,47 +7,112 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
 
     <title>Fu Calculator</title>
   </head>
   <body onload="scoring()">
 
-    <label for="hanCounter">Han</label>
-  
-    <button onclick="decrement('hanCounter')">-</button>
-    <input id="hanCounter" type="number" value="1" min="1" max="13" readonly />
-    <button onclick="increment('hanCounter')">+</button>
-    <br>
-
-    <label for="hanCounter">Fu</label>
-  
-    <button onclick="decrement('fuCounter')">-</button>
-    <input id="fuCounter" type="number" value="30" min="20" max="110" step="5" readonly />
-    <button onclick="increment('fuCounter')">+</button>
-    <br>
-
-    <label for="honbaCounter">Honba</label>
-
-    <button onclick="decrement('honbaCounter')">-</button>
-    <input id="honbaCounter" type="number" value="0" min="0" readonly />
-    <button onclick="increment('honbaCounter')">+</button>
-    <br>
-
-    <label for="dealerCheckbox">Dealer</label>
-    <input type="checkbox" onchange="scoring()" id="dealerCheckbox" name="dealerCheckbox" value="true">
-    <br>
-
-    <label for="scoreRon">Ron</label>
-    <input id="ron" type="number" min="1000" max="48000" step="100" readonly />
-    <br>
-
-    <label for="scoreTsumo">Tsumo</label>
-    <input id="tsumo1" type="number" value="48000" min="300" max="16000" step="100" readonly />
-    <input id="tsumo2" type="number" value="48000" min="300" max="16000" step="100" readonly />
-
     
+    <div class="container">
 
+      <div class="row">
+        <div class="col-1">
+          <label for="hanCounter">Han</label>
+        </div>
 
+        <div class="col-0">
+          <button type="button" onclick="decrement('hanCounter')" class="btn btn-dark btn-sm">-</button>
+        </div>
+
+        <div class="col-1">
+          <input id="hanCounter" type="number" value="1" min="1" max="13" readonly />
+        </div>
+
+        <div class="col-md-auto">
+          <button onclick="increment('hanCounter')" class="btn btn-dark btn-sm">+</button>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-1">
+          <label for="hanCounter">Fu</label>
+        </div>
+
+        <div class="col-0">
+          <button onclick="decrement('fuCounter')" class="btn btn-dark btn-sm">-</button>
+        </div>
+
+        <div class="col-1">
+          <input id="fuCounter" type="number" value="30" min="20" max="110" step="5" readonly />
+        </div>
+
+        <div class="col-md-auto">
+          <button onclick="increment('fuCounter')" class="btn btn-dark btn-sm">+</button>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-1">
+          <label for="honbaCounter">Honba</label>
+        </div>
+
+        <div class="col-0">
+          <button onclick="decrement('honbaCounter')" class="btn btn-dark btn-sm">-</button>
+        </div>
+
+        <div class="col-1">
+          <input id="honbaCounter" type="number" value="0" min="0" max="100" readonly />
+        </div>
+
+        <div class="col-md-auto">
+          <button onclick="increment('honbaCounter')" class="btn btn-dark btn-sm">+</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-1">
+          <label for="dealerCheckbox">Dealer</label>
+        </div>
+
+        <div class="col-0">
+          <input type="checkbox" onchange="scoring()" id="dealerCheckbox" name="dealerCheckbox" value="true">
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-1">
+          <label for="scoreRon">Ron</label>
+        </div>
+
+        <div class="col-0">
+          <input id="ron" type="number" min="1000" max="48000" step="100" readonly />
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-1">
+          <label for="scoreTsumo">Tsumo</label>
+        </div>
+
+        <div class="col-0">
+          <input id="tsumo1" type="number" value="48000" min="300" max="16000" step="100" readonly />
+        </div>
+
+        <div class="col-md-auto">
+          <input id="tsumo2" type="number" value="48000" min="300" max="16000" step="100" readonly />
+        </div>
+
+      </div>
+      
+    </div>
+ 
+   
     <!-- Optional JavaScript -->
     <script src="js/functions.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
