--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body onload="scoring()">
 
     
-    <div class="container">
+    <div class="container-fluid">
 
       <div class="row">
         <div class="col-1">
@@ -30,7 +30,7 @@
           <input id="hanCounter" type="number" value="1" min="1" max="13" readonly />
         </div>
 
-        <div class="col-md-auto">
+        <div class="col-0">
           <button onclick="increment('hanCounter')" class="btn btn-dark btn-sm">+</button>
         </div>
 
@@ -49,7 +49,7 @@
           <input id="fuCounter" type="number" value="30" min="20" max="110" step="5" readonly />
         </div>
 
-        <div class="col-md-auto">
+        <div class="col-0">
           <button onclick="increment('fuCounter')" class="btn btn-dark btn-sm">+</button>
         </div>
 
@@ -68,7 +68,7 @@
           <input id="honbaCounter" type="number" value="0" min="0" max="100" readonly />
         </div>
 
-        <div class="col-md-auto">
+        <div class="col-0">
           <button onclick="increment('honbaCounter')" class="btn btn-dark btn-sm">+</button>
         </div>
       </div>
@@ -104,7 +104,7 @@
           <input id="tsumo1" type="number" value="48000" min="300" max="16000" step="100" readonly />
         </div>
 
-        <div class="col-md-auto">
+        <div class="col-1">
           <input id="tsumo2" type="number" value="48000" min="300" max="16000" step="100" readonly />
         </div>
 
