--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-1">
+        <div class="col-md-auto">
           <label for="hanCounter">Han</label>
         </div>
 
@@ -86,7 +86,7 @@
 
       <div class="row">
         <div class="col-1">
-          <label for="scoreRon">Ron</label>
+          <label for="scoreRon" id="ronLabel">Ron</label>
         </div>
 
         <div class="col-md-auto">
