--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <div class="container-fluid">
 
-      <div class="row">
+      <div class="row mt-2">
         <div class="col-1">
           <label for="hanCounter">Han</label>
         </div>
@@ -32,7 +32,7 @@
 
       </div>
 
-      <div class="row">
+      <div class="row mt-2">
         <div class="col-1">
           <label for="hanCounter">Fu</label>
         </div>
@@ -45,7 +45,7 @@
 
       </div>
 
-      <div class="row">
+      <div class="row mt-2">
         <div class="col-1">
           <label for="honbaCounter">Honba</label>
         </div>
@@ -58,7 +58,7 @@
 
       </div>
 
-      <div class="row align-items-center">
+      <div class="row mt-2">
         <div class="col-1">
           <label for="dealerCheckbox">Dealer</label>
         </div>
@@ -69,7 +69,7 @@
 
       </div>
 
-      <div class="row">
+      <div class="row mt-2">
         <div class="col-1">
           <label for="scoreRon" id="ronLabel">Ron</label>
         </div>
@@ -80,7 +80,7 @@
 
       </div>
 
-      <div class="row">
+      <div class="row mt-2">
         <div class="col-1">
           <label for="scoreTsumo">Tsumo</label>
         </div>
@@ -95,7 +95,7 @@
 
       </div>
 
-      <div class="row">
+      <div class="row mt-2">
         <div class="col-lg-12">
           <button type="reset" class="btn btn-dark btn-lg"onclick="reset()">Reset</button>
         </div>
